<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">皮皮影视</string>
    <string name="pipiplayer_versionname">2.0.1</string>
    <integer name="pipiplayer_versioncode">20140728</integer>    
    <string name="BaiduMobAd_CHANNEL">pipiweb</string>
    <string name="BaiduMobAd_STAT_ID">529eca0d56240b79de0ccc46</string>
    <string name="build1">Build</string>
    <string name="build2">2014.07.28</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">搜索</string>
    <string name="histroy">播放记录</string>
    <string name="download">下载</string>
    <string name="shoucang">收藏</string>
    <string name="local">本地</string>
    <string name="pipituijian">皮皮推荐</string>
    <string name="pindaofenlei">频道分类</string>
    <string name="gerenzhongxin">个人中心</string>
    <string name="qq">反馈问题QQ群:219176374</string>
    <string name="writecomment">发表评论</string>
    
    
    <string name="all">全部</string>
    <string name="shouye">首页</string>
    <string name="dianying">电影</string>
    <string name="dianshiju">电视剧</string>
    <string name="zongyi">综艺</string>
    <string name="dongman">动漫</string>
    <string name="zhuanti">专题</string>
    <string name="dapian">大片</string>
    <string name="daluju">大陆剧</string>
    <string name="gangtaiju">港台剧</string>
    <string name="oumeiju">欧美剧</string>
    <string name="rihanju">日韩剧</string>
    <string name="moreclass">更多></string>
    
    <string name="selectnum">选集</string>
    <string name="movieinfo">详情</string>
    <string name="comment">评论</string>
    <string name="youlike">猜你喜欢</string>
    <string name="share">分享</string>
    <string name="order">排序</string>
    <string name="type">类型</string>
    <string name="area">地区</string>
    <string name="year">年份</string>
    <string name="order_2">↓倒序</string>
    <string name="order_1">↑正序</string>
    
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">努力加载中...</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新...</string>
    <string name="hot_movie">皮皮电影</string>
    <string name="class_movie">分  类</string>
    <string name="more">更  多</string>
    <string name="videoInfo">视频信息</string>
    <string name="main_footer_other">其他</string>
    <string name="playhistory">播放历史</string>
    <string name="main_mymovie">我的视频</string>
    <string name="main_search">搜索</string>
    <string name="clear">清空</string>
    <string name="mainfilter">筛选</string>
    <string name="buffer_loading">努力缓冲中...</string>
    <string name="about_appinfo">版本信息</string>
    <string name="pipiplayerclient_name">皮皮影视android手机版</string>
    <string name="contact_us">联系方式</string>
    <string name="official_email1">邮箱</string>
    <string name="official_email2">mpipi@pipi.cn</string>
    <string name="official_qqgroup1">QQ群</string>
    <string name="official_qqgroup2">219176374</string>
    <string name="about_pipi">关于皮皮网</string>
    <string name="about_pipidetial">皮皮网（http://www.pipi.cn） 成立于2007年1月，是国内更新最快、播放最流畅、最高清的大型在线影视网站。我们以第一时间更新最新最热的影视节目，并提供免费点播为特色；目前正朝着以影视为核心的综合互动娱乐平台迅速迈进.</string>
    <string name="sdcardtotal">总量</string>
    <string name="channel_grade">评分:</string>
    <string name="offlinedown_btn_edit">编辑</string>
    <string name="offlinedown_btn_commit">完成</string>
    <string name="channel_detial_protagonist">主演:</string>
    <string name="NONETWORK">未检测到网络</string>
    <string name="HTTP_IOEXCEPTION">网络请求异常</string>
    <string name="NO_DATA_RETURN">获取数据失败,请检查网络</string>
    <string name="NEWVERSIOM">是否更新新版本？</string>
    <string name="OLDVERSIOM">当前为最新版本</string>
    <string name="ISWIFI">当前为wifi网络</string>
    <string name="ISGPRS">当前为gprs网络</string>
    <string name="notstart">无</string>
    <string name="task_finish">下载完成</string>
    <string name="task_waitting">等待下载</string>
    <string name="task_pause">暂停下载</string>
    <string name="task_merge">正在更新</string>
    <string name="task_error">网络异常</string>
    <string name="histroyto">时长：</string>
    <string name="saveto">收藏时间：</string>
    <string name="updateself">自动更新版本</string>
    <string name="setnetwork">设置网络</string>
    <string name="allowGPRSplay">是否允许 GPRS/3G/2G流量播放</string>
    <string name="allowGPRSdown">是否允许 GPRS/3G/2G流量 下载</string>
    <string name="adddowntask">该影片加入了下载列表</string>
    <string name="removedowntask">该影片已被删除</string>
    <string name="addsave">收藏成功</string>
    <string name="removesave">收藏被取消</string>
    <string name="selectall">全选</string>
    <string name="notselectall">全不选</string>
    <string name="waitintformovie">正在提取视频，请耐心等待</string>
    <string name="waitintforyouku">优酷视频全屏后，请点击屏幕播放</string>
    <string name="playnext">自动播放下一集</string>
    <string name="playfromhistroy">从历史位置开始播放</string>
    <string name="allowdown">允许GPRS/3G/2G流量下载</string>
    <string name="cleanCache">清除缓存</string>
    <string name="cleanCachefinish">清除缓存完成</string>
    <string name="somethingerr">加载遇到些问题，我们将尽快修复</string>
    <string name="tips">提示</string>
    <string name="exit_sure">确定退出程序么？</string>
    <string name="exit_click">再按一次退出程序</string>
    <string name="exit_activity">再按一次返回</string>
    <string name="update_app">软件升级提示</string>
    <string name="update_ok">更新</string>
    <string name="update_app_message">发现新版本,建议立即更新使用</string>
    <string name="update_app_inservice">正在后台升级新版本</string>
    <string name="nosoucefound">sorry,暂无数据</string>
    <string name="nocomment"> 暂无评论!</string>
    <string name="smsfromandroid"> android手机端游客</string>
    <string name="dataleft"> 剩余影片</string>
    <string name="getalldata"> 已经最后一页</string>
    <string name="droidfu_progress_dialog_message">努力加载中...</string> 
    <string name="droidfu_progress_dialog_title">""</string>
    <string name="submit">提交</string>
    <string name="submit_comment">评论已提交审核！</string>
    <string name="submit_comment_fail">评论失败！</string>
    <string name="advice">意见和建议</string>
    <string name="search_result">搜索结果</string>
    <string name="control_light">步骤1：上下滑控制亮度</string>
    <string name="control_sound">步骤2：上下滑控制声音</string>
    <string name="control_progress">步骤3：左右滑控制播放进度</string>
    <string name="control_complete">太棒了!</string>
    <string name="sortByTime">最新</string>
    <string name="sortByHot">最热</string>
    <string name="sortByScore">评分</string>
    <string name="set">设置</string>
    
    <string name="left">剩余</string>
    <string name="btnEdit">编辑</string>
    <string name="btnOfflinePlay">下载</string>
    <string name="btnFavorites">收藏</string>
    <string name="btnLocalMovie">本地</string>
    <string name="btnPlayHistroy">历史</string>
    <string name="historySearch">历史搜索</string>
    <string name="hotSearch">热门搜索</string>
    <string name="DOWN_URL_ERR">正在尝试官方下载连接...</string>
    <string name="share_complete">分享成功</string>
	<string name="share_failed"> 分享失败</string>
	<string name="share_cancel">取消分享</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="tencent_weibo">腾讯微博</string>
	<string name="qq_space">QQ空间</string>
	<string name="renren">人人网</string>
	<string name="kaixin">开心网</string>
	<string name="mkdir_fail">创建目录失败</string>
	<string name="mkdir_set">设置存储路径</string>
	<string name="nottaskallfinish">还有未下载完成的影片</string>
	<string name="sdRemoved">SD卡已被拔出或无法工作,程序暂时关闭</string>
	
</resources>
