<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="7"
    android:background="@color/black"
    android:orientation="vertical">
    <ImageView 
    android:id="@+id/bt_play_start"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/bt_play_start"
    android:layout_centerInParent="true"
    android:scaleType="centerInside"/>
    <FrameLayout
        android:id="@+id/frame_player"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="false" />
    </RelativeLayout>

    <LinearLayout 
    android:id="@+id/ll_viewPager"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="4"
    android:orientation="vertical">
    <RadioGroup
        android:id="@+id/bar_radio"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal" >
        
        <RadioButton  
            android:id="@+id/tv_guid1"  
            style="@style/main_radio_button2"
            android:layout_width="fill_parent"  
            android:layout_height="fill_parent"  
            android:layout_weight="1.0"  
            android:checked="true"
            android:textColor="@color/radiobutton_color"
            android:text="@string/selectnum"   
            android:textSize="14sp"/>  
  
        <RadioButton  
            android:id="@+id/tv_guid2"  
            style="@style/main_radio_button2"
            android:layout_width="fill_parent"  
            android:layout_height="fill_parent"  
            android:layout_weight="1.0"  
            android:textColor="@color/radiobutton_color"
            android:text="@string/download"   
            android:textSize="14sp"/>  
  
        <RadioButton  
            android:id="@+id/tv_guid3"  
            style="@style/main_radio_button2"
            android:layout_width="fill_parent"  
            android:layout_height="fill_parent"  
            android:layout_weight="1.0"  
            android:textColor="@color/radiobutton_color"
            android:text="@string/movieinfo"   
            android:textSize="14sp"/>  
  
        <RadioButton  
            android:id="@+id/tv_guid4"  
            style="@style/main_radio_button2"
            android:layout_width="fill_parent"  
            android:layout_height="fill_parent"  
            android:layout_weight="1.0"  
            android:textColor="@color/radiobutton_color"
            android:text="@string/comment"   
            android:textSize="14sp"/> 
            
        <RadioButton  
            android:id="@+id/tv_guid5"  
            style="@style/main_radio_button2"
            android:layout_width="fill_parent"  
            android:layout_height="fill_parent"  
            android:layout_weight="1.0"  
            android:textColor="@color/radiobutton_color"
            android:text="@string/youlike"   
            android:textSize="14sp"/> 
    </RadioGroup>  
    
    <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
        
    <include layout="@layout/viewpager"/>
    <include layout="@layout/progress_bar"
             android:layout_centerInParent="true"/>
     <include layout="@layout/control_dianying"
        android:visibility="gone"/>   
    </RelativeLayout>
  </LinearLayout>
</LinearLayout>
