<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/bg_fragment_left"
    android:orientation="vertical">
    
    <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="48dp"
    android:background="@drawable/line_menu_title" 
    android:gravity="center_vertical">
    <ImageView 
    android:id="@+id/img"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent" 
    android:src="@drawable/logo"
    android:layout_margin="5dp"/>
    <TextView 
    android:layout_toRightOf="@+id/img"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent" 
    android:text="@string/app_name"
    android:textSize="20dp"
    android:textColor="@color/white"
    android:gravity="center_vertical"/>
    <ImageView 
    android:id="@+id/bt_set"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:src="@drawable/bt_set"
    android:layout_alignParentRight="true"
    android:layout_marginRight="10dp"/>
        
    </RelativeLayout>
    
     <ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:layout_weight="1">
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
     <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="5dp">
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:text="@string/pindaofenlei"
    android:textSize="15sp"
    android:layout_margin="10dp"
    android:textColor="@color/white"/>
    
    <View 
    android:layout_width="fill_parent"
    android:layout_height="1dp" 
    android:background="@drawable/line_menu_line"
    android:layout_marginRight="25dp"
    android:layout_gravity="center_vertical"/>
    
    </LinearLayout>
    
    <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <Button 
    android:id="@+id/bt_shouye"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"  
    android:background="@drawable/bt_home_2"/>
    <Button 
    android:id="@+id/bt_dianying"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp" 
    android:background="@drawable/bt_dianying_1"
    android:layout_toRightOf="@+id/bt_shouye"/>
    <Button 
    android:id="@+id/bt_dianshiju" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"  
    android:background="@drawable/bt_dianshiju_1"
    android:layout_toRightOf="@+id/bt_dianying"/>
    <Button 
    android:id="@+id/bt_zongyi"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_margin="5dp" 
    android:background="@drawable/bt_zongyi_1"
    android:layout_below="@+id/bt_shouye"/>
    <Button 
    android:id="@+id/bt_dongman"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_margin="5dp" 
    android:background="@drawable/bt_dongman_1"
    android:layout_below="@+id/bt_shouye"
    android:layout_toRightOf="@+id/bt_zongyi"/>
    
    </RelativeLayout>
    
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="5dp">
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:text="@string/pipituijian"
    android:textSize="15sp"
    android:layout_margin="10dp"
    android:textColor="@color/white"/>
    
    <View 
    android:layout_width="fill_parent"
    android:layout_height="1dp" 
    android:background="@drawable/line_menu_line"
    android:layout_marginRight="25dp"
    android:layout_gravity="center_vertical"/>
    
    </LinearLayout>
    
    <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <Button 
    android:id="@+id/bt_zhuanti"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_margin="5dp" 
    android:background="@drawable/bt_zhuanti_1"/>
    <Button 
    android:id="@+id/bt_dapian"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_margin="5dp" 
    android:background="@drawable/bt_dapian_1"
    android:layout_toRightOf="@+id/bt_zhuanti"/>
    </RelativeLayout>
    
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="5dp">
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:text="@string/gerenzhongxin"
    android:textSize="15sp"
    android:layout_margin="10dp"
    android:textColor="@color/white"/>
    
    <View 
    android:layout_width="fill_parent"
    android:layout_height="1dp" 
    android:background="@drawable/line_menu_line"
    android:layout_marginRight="25dp"
    android:layout_gravity="center_vertical"/>
    
    </LinearLayout>
    
    <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <Button 
    android:id="@+id/bt_histroy"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_margin="5dp" 
    android:background="@drawable/bt_histroy_1"/>
    <Button 
    android:id="@+id/bt_shoucang"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_margin="5dp" 
    android:background="@drawable/bt_save_1"
    android:layout_toRightOf="@+id/bt_download"/>
    <Button 
    android:id="@+id/bt_local" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_margin="5dp" 
    android:background="@drawable/bt_local_1"
    android:layout_toRightOf="@+id/bt_shoucang"/>
    <Button 
    android:id="@+id/bt_download" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_margin="5dp" 
    android:background="@drawable/bt_download_1"
    android:layout_below="@+id/bt_histroy"/>
    
    <RelativeLayout
        android:id="@+id/entrance"
        android:layout_width="wrap_content"
        android:layout_margin="5dp" 
        android:layout_height="wrap_content" 
        android:layout_below="@+id/bt_histroy"
        android:layout_toRightOf="@+id/bt_download">

        <!-- 入口点击图标 -->
        <ImageView
            android:id="@+id/imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bt_app_1"
            android:scaleType="fitXY" />

        <!-- 入口文字 -->
        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="8sp" />

        <!-- 新广告提示布局 -->
        <RelativeLayout
            android:id="@+id/newtip_area"
            android:layout_width="28dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:gravity="right" >

            <ImageView
                android:id="@+id/newtip_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/newtip_tv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:textColor="#ffffff"
                android:textSize="8sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>
    
    </RelativeLayout>
    </LinearLayout>
    </ScrollView>
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:text="@string/qq"
    android:textSize="13sp"
    android:layout_margin="10dp"
    android:gravity="bottom"
    android:textColor="#aaaaaa"/>
</LinearLayout>